@@ -71,7 +71,7 @@ void ags_audio_file_close(AgsAudioFile *audio_file);
 void ags_audio_file_read_audio_signal(AgsAudioFile *audio_file);
 void ags_audio_file_seek(AgsAudioFile *audio_file, guint frames, gint whence);
 void ags_audio_file_write(AgsAudioFile *audio_file,
-			  signed short *buffer, guint buffer_size);
+			  void *buffer, guint buffer_size, guint format);
 void ags_audio_file_flush(AgsAudioFile *audio_file);
 
 AgsAudioFile* ags_audio_file_new(gchar *filename,
