@@ -1,3 +1,9 @@
+ags (0.7.78)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_audio_file_write() to have additional format parameter
+	* fixed potential NULL pointer in ags_audio_file_write()
+
 ags (0.7.77)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
